[K4.0] Crypsis: Change menu to avoid collapse main menu issue

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -802,3 +802,14 @@ div.pagination a.disabled:hover {
 .btn .caret {
 	margin-bottom: 0 !important;
 }
+
+.knav-collapse.collapse {
+	height: auto;
+}
+
+.knav-collapse > .nav {
+	display:none
+}
+.knav-collapse.collapse.in > .nav {
+	display: inline-block;
+}
